# CUDA-CNN-Acceleration

./: CMakeLists.txt  CUDA-CNN.sln
CUDA-CNN/: CUDA-CNN.vcxproj
CUDA-CNN/x64/Debug/: CUDA-CNN.exe.recipe
CUDA-CNN/x64/Debug/CUDA-CNN.tlog/: CUDA-CNN.lastbuildstate
include/: Metrics.hpp  Net.hpp  Train.hpp
src/: Metrics.cpp  Net.cpp  Train.cpp  main.cpp
